# rsdiary

./: Cargo.toml  README.md
add/: Cargo.toml
add/src/: main.rs
search/: Cargo.toml
search/src/: main.rs  parser.rs  responder.rs
search/templates/: index.html
src/: main.rs
