[package]
name = "rsdiary_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sudachi = { git = "https://github.com/WorksApplications/sudachi.rs.git", branch = "develop" }

[[bin]]
name = "rsdiary_search"
path = "src/main.rs"
